# savvy

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  cmf_spec.md  cvcf_spec.md  m3vcf_spec.md  package-linux.sh  packaging-dockerfile-ubuntu16  packaging-singularity-alpine3.17.def  requirements.txt  s1r_spec.md  sample_file.vcf  sav_spec.md  sav_spec_v2.md  test_file.cmf  test_file.vcf  test_file_hds.vcf  test_file_missing_headers.vcf
.github/workflows/: build_and_test.yml
cmake/: get-dependencies.cmake
dep/: CMakeLists.txt  htslib.cmake
doc/: genotype_matrix.md  marker_group_iterator.md  variant_group_iterator.md
include/: allele_status.hpp  allele_vector.hpp  cmf_reader.hpp  compressed_vector.hpp  cvcf_reader.hpp  genotype_vector.hpp  haplotype_vector.hpp  m3vcf_reader.hpp  portable_endian.h  reader.hpp  region.hpp  s1r.hpp  sav_reader.hpp  savvy.hpp  sparse_vector.hpp  test_class.hpp  variant_iterator.hpp  varint.hpp  vc.hpp  vcf_reader.hpp
include/sav/: concat.hpp  export.hpp  filter.hpp  head.hpp  import.hpp  index.hpp  merge.hpp  rehead.hpp  reheader.hpp  sort.hpp  stat.hpp  utility.hpp
include/savvy/: allele_status.hpp  allele_vector.hpp  armadillo_vector.hpp  bcf_writer.hpp  compressed_vector.hpp  csi.hpp  data_format.hpp  dictionary.hpp  eigen3_vector.hpp  endianness.hpp  file.hpp  logging.hpp  m3vcf_reader.hpp  pbwt.hpp  portable_endian.hpp  reader.hpp  region.hpp  s1r.hpp  sample_subset.hpp  sav1.hpp  sav_reader.hpp  savvy.hpp  site_info.hpp  sparse_vector.hpp  typed_value.hpp  ublas_vector.hpp  utility.hpp  variant_group_iterator.hpp  variant_iterator.hpp  varint.hpp  vcf_reader.hpp  writer.hpp
include/test/: test_class.hpp
scripts/: compare-gt-compression.sh
src/: bcf2cvcf.cpp  bcf2m3vcf.cpp  bcf2sav.cpp  cmf_reader.cpp  cmf_sample_sort.cpp  cvcf_reader.cpp  cvcf_sample_sort.cpp  linreg_ttest.cpp  m3vcf_reader.cpp  reader.cpp  sav.cpp  sav2vcf.cpp  sav_reader.cpp  sav_sample_sort.cpp  savvy.cpp  savvy_speed_test.cpp  site_info.cpp  slr_examples.cpp  test.cpp  test_class.cpp  utility.cpp  varint.cpp  vc.cpp  vcf2sav.cpp  vcf_reader.cpp
src/eval/: main.cpp
src/sav/: bcf2m3vcf.cpp  concat.cpp  export.cpp  head.cpp  import.cpp  index.cpp  main.cpp  merge.cpp  rehead.cpp  reheader.cpp  sav_sample_sort.cpp  sort.cpp  stat.cpp  utility.cpp
src/savvy/: m3vcf_reader.cpp  reader.cpp  region.cpp  sav_reader.cpp  savvy.cpp  site_info.cpp  utility.cpp  varint.cpp  vcf_reader.cpp
src/test/: linreg_ttest.cpp  main.cpp  savvy_speed_test.cpp  slr_examples.cpp  sp_reg.cpp  tcdf.hpp  test_class.cpp
